tests/snapshots/examples_fixtures/type_classes__result_directed_method_lookup.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/result_directed_method_lookup.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
