tests/snapshots/examples_fixtures/type_classes__result_directed_two_dictionaries.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/result_directed_two_dictionaries.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
