tests/snapshots/examples_fixtures/type_classes__return_directed_pure.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/return_directed_pure.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
