tests/snapshots/examples_fixtures/type_classes__sibling_method_call_in_instance.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/sibling_method_call_in_instance.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
