tests/snapshots/examples_fixtures/type_classes__structured_predicate.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/structured_predicate.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
