tests/snapshots/examples_fixtures/type_classes__stuck_associated_type.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/stuck_associated_type.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
