tests/snapshots/examples_fixtures/type_classes__stuck_constraint.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/stuck_constraint.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
