tests/snapshots/examples_fixtures/type_classes__superclass_across_modules.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/superclass_across_modules.flx
== compile ==
failed (compile)
== diagnostics ==
error[E421]: Unknown Member in Exposing

`size` is not defined in module `SuperclassAcrossModules.Scale`.

  examples/type_classes/superclass_across_modules.flx:18:1
   |
18 | import SuperclassAcrossModules.Scale exposing (size, weight)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Check the public members of `SuperclassAcrossModules.Scale` or remove `size` from the exposing list.
== stdout ==
<not executed>
